[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thienatom"
version = "0.1.0"
description = "Universal Atomic Utility Registry — language-first, zero dependencies, one task per atom."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Thien Nguyen", email = "thiennguyen@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["utils", "utilities", "atomic", "zero-dependency"]

[project.urls]
Homepage = "https://github.com/thiennguyen/ThienAtom"
Repository = "https://github.com/thiennguyen/ThienAtom"

[tool.hatch.build.targets.wheel]
packages = ["units/python/thienatom"]

[tool.hatch.build.targets.sdist]
include = [
    "units/python/thienatom",
    "README.md"
]
